fixed positioning of side bar no wrap now

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -15,7 +15,7 @@ div.header {
   position:relative;
   width: 1000px;
   height: 195px;
-  margin-left:25px;
+  margin-left:15px;
   margin-top:10px;
   color:#FFF;
   background-color:#293354;
@@ -81,8 +81,9 @@ div#navbar li a:hover{
 
 /*  Main Body */
 
-#mainbody{
-  width:1050px;
+.mainbody{
+
+  position: relative;
 }
 
 #main{
@@ -92,7 +93,7 @@ div#navbar li a:hover{
   border-right: 2px #00AF33 solid;
   display:inline-block;
   width:745px;
-  margin-left:40px;
+  margin-left:25px;
 
   margin-bottom:10px;
   min-height:800px;
@@ -196,7 +197,7 @@ div#navbar li a:hover{
 }
 
 #projects_body ul {
-  poistion:relativel;
+  poistion:relative;
   margin-left: -30px;
   list-style-type: none; 
 }
@@ -204,13 +205,13 @@ div#navbar li a:hover{
 /* Sidebar */
 
 #side{
-  position: relative;
+  position: absolute;
   border-radius:10px;
   text-align: center;
-  float:left;
   margin-top:-22px;
-  margin-left:20px;
-  display:inline-block;
+  margin-left:800px;
+  display:block;
+  overflow: hidden;
   font-size: .70em;
 
 
@@ -265,7 +266,7 @@ div.footer{
   color:white;
   width:975px;
   padding:10px;
-  margin:25px;
+  margin:15px;
   display:block;
   height:150px;
   border-left: 2px #00AF33 solid;
